--- a/design/login.html
+++ b/design/login.html
@@ -18,7 +18,7 @@
     <script>
         document.getElementById('authorizeButton').addEventListener('click', async function() {
             const clientId = 'bca2a89f33694250b5b79633e3435a39';
-            const redirectUri = 'https://wanghci.github.io/spotify-api-tutorial/';
+            const redirectUri = 'https://mart32jm.github.io/design/login.html';
             const scope = 'user-read-private user-read-email';
 
             // Construct the authorization URL
