--- a/design/login.html
+++ b/design/login.html
@@ -21,29 +21,58 @@
             const redirectUri = 'https://mart32jm.github.io/design/login.html';
             const scope = 'user-read-private user-read-email';
 
-            // Construct the authorization URL
-            const authUrl = new URL("https://accounts.spotify.com/authorize");
-            const params = {
-                response_type: 'code',
-                client_id: clientId,
-                scope: scope,
-                redirect_uri: redirectUri,
+            // Function to extract authorization code from URL
+            function getAuthorizationCodeFromUrl() {
+                const urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get('code');
+            }
+
+            // Retrieve authorization code
+            const authCode = getAuthorizationCodeFromUrl();
+            if (!authCode) {
+                alert('Authorization code not found.');
+                return;
+            }
+
+            // Get code verifier from localStorage
+            const codeVerifier = localStorage.getItem('code_verifier');
+            if (!codeVerifier) {
+                alert('Code verifier not found.');
+                return;
+            }
+
+            // Exchange authorization code for access token
+            const payload = {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams({
+                    grant_type: 'authorization_code',
+                    client_id: clientId,
+                    redirect_uri: redirectUri,
+                    code_verifier: codeVerifier,
+                    code: authCode,
+                }),
             };
-            authUrl.search = new URLSearchParams(params).toString();
 
-            // Redirect the user to the authorization URL
-            window.location.href = authUrl.toString();
+            try {
+                const response = await fetch('https://accounts.spotify.com/api/token', payload);
+                const data = await response.json();
+                const accessToken = data.access_token;
+
+                // Store access token in localStorage for later use
+                localStorage.setItem('access_token', accessToken);
+
+                // Display user profile using the access token
+                await displayUserProfile(accessToken);
+            } catch (error) {
+                console.error('Error exchanging authorization code for access token:', error);
+            }
         });
-
-        // Function to extract access token from URL
-        function getAccessTokenFromUrl() {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get('code');
-        }
 
         // Function to fetch user profile using access token
         async function fetchUserProfile(accessToken) {
-            alert('is this being accessed?');
             const response = await fetch("https://api.spotify.com/v1/me", {
                 headers: {
                     'Authorization': 'Bearer ' + accessToken,
@@ -54,25 +83,23 @@
         }
 
         // Function to display user profile information
-        async function displayUserProfile() {
-            const accessToken = getAccessTokenFromUrl();
-            if (!accessToken) {
-                alert('Access token not found.');
-                return;
-            }
-
+        async function displayUserProfile(accessToken) {
             try {
                 const userProfile = await fetchUserProfile(accessToken);
                 document.getElementById('userName').textContent = 'Username: ' + userProfile.display_name;
-                document.getElementById('profileImage').src = userProfile.images[0].url;
+                
+                if (userProfile.images && userProfile.images.length > 0) {
+                    document.getElementById('profileImage').src = userProfile.images[0].url;
+                    document.getElementById('profileImage').style.display = 'block';
+                } else {
+                    document.getElementById('profileImage').style.display = 'none';
+                    console.warn('User profile image not found.');
+                }
+
+                document.getElementById('profileInfo').style.display = 'block'; // Show profile info
             } catch (error) {
                 console.error('Error fetching user profile:', error);
             }
-        }
-
-        // Call function to display user profile only after authorization
-        if (window.location.search.includes('code=')) {
-            displayUserProfile();
         }
     </script>
 </body>
