--- a/design/login.html
+++ b/design/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Authorization</title>
+    <title>Spotify Profile</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -21,27 +21,29 @@
             const redirectUri = 'https://mart32jm.github.io/design/login.html';
             const scope = 'user-read-private user-read-email';
 
-            // Function to extract authorization code from URL
-            function getAuthorizationCodeFromUrl() {
-                const urlParams = new URLSearchParams(window.location.search);
-                return urlParams.get('code');
-            }
+            // Construct the authorization URL
+            const authUrl = new URL("https://accounts.spotify.com/authorize");
+            const params = {
+                response_type: 'code',
+                client_id: clientId,
+                scope: scope,
+                redirect_uri: redirectUri,
+            };
+            authUrl.search = new URLSearchParams(params).toString();
 
-            // Retrieve authorization code
-            const authCode = getAuthorizationCodeFromUrl();
-            if (!authCode) {
-                alert('Authorization code not found.');
-                return;
-            }
+            // Redirect the user to the authorization URL
+            window.location.href = authUrl.toString();
+        });
 
-            // Get code verifier from localStorage
+        // Function to extract access token from URL
+        function getAccessTokenFromUrl() {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get('code');
+        }
+
+        // Function to fetch access token from Spotify API
+        async function fetchAccessToken(authCode) {
             const codeVerifier = localStorage.getItem('code_verifier');
-            if (!codeVerifier) {
-                alert('Code verifier not found.');
-                return;
-            }
-
-            // Exchange authorization code for access token
             const payload = {
                 method: 'POST',
                 headers: {
@@ -49,29 +51,18 @@
                 },
                 body: new URLSearchParams({
                     grant_type: 'authorization_code',
-                    client_id: clientId,
-                    redirect_uri: redirectUri,
+                    client_id: 'bca2a89f33694250b5b79633e3435a39',
+                    redirect_uri: 'https://mart32jm.github.io/design/login.html',
                     code_verifier: codeVerifier,
                     code: authCode,
                 }),
             };
+            const response = await fetch('https://accounts.spotify.com/api/token', payload);
+            const data = await response.json();
+            return data.access_token;
+        }
 
-            try {
-                const response = await fetch('https://accounts.spotify.com/api/token', payload);
-                const data = await response.json();
-                const accessToken = data.access_token;
-
-                // Store access token in localStorage for later use
-                localStorage.setItem('access_token', accessToken);
-
-                // Display user profile using the access token
-                await displayUserProfile(accessToken);
-            } catch (error) {
-                console.error('Error exchanging authorization code for access token:', error);
-            }
-        });
-
-        // Function to fetch user profile using access token
+        // Function to fetch user profile from Spotify API
         async function fetchUserProfile(accessToken) {
             const response = await fetch("https://api.spotify.com/v1/me", {
                 headers: {
@@ -83,24 +74,25 @@
         }
 
         // Function to display user profile information
-        async function displayUserProfile(accessToken) {
+        async function displayUserProfile() {
+            const authCode = getAccessTokenFromUrl();
+            if (!authCode) {
+                alert('Authorization code not found.');
+                return;
+            }
+
             try {
+                const accessToken = await fetchAccessToken(authCode);
                 const userProfile = await fetchUserProfile(accessToken);
                 document.getElementById('userName').textContent = 'Username: ' + userProfile.display_name;
-                
-                if (userProfile.images && userProfile.images.length > 0) {
-                    document.getElementById('profileImage').src = userProfile.images[0].url;
-                    document.getElementById('profileImage').style.display = 'block';
-                } else {
-                    document.getElementById('profileImage').style.display = 'none';
-                    console.warn('User profile image not found.');
-                }
-
-                document.getElementById('profileInfo').style.display = 'block'; // Show profile info
+                document.getElementById('profileImage').src = userProfile.images[0].url;
             } catch (error) {
                 console.error('Error fetching user profile:', error);
             }
         }
+
+        // Call function to display user profile once the page loads
+        displayUserProfile();
     </script>
 </body>
 </html>
