--- a/design/login.html
+++ b/design/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Profile</title>
+    <title>Spotify Authorization</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -17,16 +17,26 @@
 
     <script>
         document.getElementById('authorizeButton').addEventListener('click', async function() {
+            const generateRandomString = (length) => {
+                const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+                const values = crypto.getRandomValues(new Uint8Array(length));
+                return Array.from({ length: length }, () => possible[values[i] % possible.length]).join('');
+            };
+
+            const codeVerifier = generateRandomString(64);
+            window.localStorage.setItem('code_verifier', codeVerifier); // Save the code verifier for later
+
             const clientId = 'bca2a89f33694250b5b79633e3435a39';
             const redirectUri = 'https://mart32jm.github.io/design/login.html';
             const scope = 'user-read-private user-read-email';
 
-            // Construct the authorization URL
             const authUrl = new URL("https://accounts.spotify.com/authorize");
             const params = {
                 response_type: 'code',
                 client_id: clientId,
                 scope: scope,
+                code_challenge_method: 'S256',
+                code_challenge: codeVerifier, // The hashed code verifier
                 redirect_uri: redirectUri,
             };
             authUrl.search = new URLSearchParams(params).toString();
@@ -35,15 +45,17 @@
             window.location.href = authUrl.toString();
         });
 
-        // Function to extract access token from URL
-        function getAccessTokenFromUrl() {
+        async function displayUserProfile() {
             const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get('code');
-        }
+            const authCode = urlParams.get('code');
 
-        // Function to fetch access token from Spotify API
-        async function fetchAccessToken(authCode) {
-            const codeVerifier = localStorage.getItem('code_verifier');
+            if (!authCode) {
+                console.error('Authorization code not found.');
+                return;
+            }
+
+            const codeVerifier = window.localStorage.getItem('code_verifier');
+
             const payload = {
                 method: 'POST',
                 headers: {
@@ -54,36 +66,22 @@
                     client_id: 'bca2a89f33694250b5b79633e3435a39',
                     redirect_uri: 'https://mart32jm.github.io/design/login.html',
                     code_verifier: codeVerifier,
-                    code: authCode,
+                    code: authCode, // From the URL
                 }),
             };
-            const response = await fetch('https://accounts.spotify.com/api/token', payload);
-            const data = await response.json();
-            return data.access_token;
-        }
-
-        // Function to fetch user profile from Spotify API
-        async function fetchUserProfile(accessToken) {
-            const response = await fetch("https://api.spotify.com/v1/me", {
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken,
-                },
-            });
-            const data = await response.json();
-            return data;
-        }
-
-        // Function to display user profile information
-        async function displayUserProfile() {
-            const authCode = getAccessTokenFromUrl();
-            if (!authCode) {
-                alert('Authorization code not found.');
-                return;
-            }
 
             try {
-                const accessToken = await fetchAccessToken(authCode);
-                const userProfile = await fetchUserProfile(accessToken);
+                const response = await fetch('https://accounts.spotify.com/api/token', payload);
+                const data = await response.json();
+                const accessToken = data.access_token;
+
+                const userProfileResponse = await fetch("https://api.spotify.com/v1/me", {
+                    headers: {
+                        'Authorization': 'Bearer ' + accessToken,
+                    },
+                });
+
+                const userProfile = await userProfileResponse.json();
                 document.getElementById('userName').textContent = 'Username: ' + userProfile.display_name;
                 document.getElementById('profileImage').src = userProfile.images[0].url;
             } catch (error) {
