--- a/design/login.html
+++ b/design/login.html
@@ -16,81 +16,87 @@
     </div>
 
     <script>
-        document.getElementById('authorizeButton').addEventListener('click', async function() {
-            const generateRandomString = (length) => {
-                const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-                const values = crypto.getRandomValues(new Uint8Array(length));
-                return Array.from({ length: length }, () => possible[values[i] % possible.length]).join('');
-            };
 
-            const codeVerifier = generateRandomString(64);
-            window.localStorage.setItem('code_verifier', codeVerifier); // Save the code verifier for later
+    const generateRandomString = (length) => {
+    const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+    const values = crypto.getRandomValues(new Uint8Array(length));
+        return values.reduce((acc, x) => acc + possible[x % possible.length], "");  
+    }
 
-            const clientId = 'bca2a89f33694250b5b79633e3435a39';
-            const redirectUri = 'https://mart32jm.github.io/design/login.html';
-            const scope = 'user-read-private user-read-email';
+    const codeVerifier  = generateRandomString(64);
 
-            const authUrl = new URL("https://accounts.spotify.com/authorize");
-            const params = {
-                response_type: 'code',
-                client_id: clientId,
-                scope: scope,
-                code_challenge_method: 'S256',
-                code_challenge: codeVerifier, // The hashed code verifier
-                redirect_uri: redirectUri,
-            };
-            authUrl.search = new URLSearchParams(params).toString();
+    const sha256 = async (plain) => {
+    const encoder = new TextEncoder()
+    const data = encoder.encode(plain)
+        return window.crypto.subtle.digest('SHA-256', data)
+    }
 
-            // Redirect the user to the authorization URL
-            window.location.href = authUrl.toString();
-        });
+    const base64encode = (input) => {
+        return btoa(String.fromCharCode(...new Uint8Array(input)))
+            .replace(/=/g, '')
+            .replace(/\+/g, '-')
+            .replace(/\//g, '_');
+    }
 
-        async function displayUserProfile() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const authCode = urlParams.get('code');
+    const hashed = await sha256(codeVerifier)
+    const codeChallenge = base64encode(hashed);
 
-            if (!authCode) {
-                console.error('Authorization code not found.');
-                return;
-            }
+    window.localStorage.setItem('code_verifier', codeVerifier); // Save the code verifier for later
 
-            const codeVerifier = window.localStorage.getItem('code_verifier');
+    const clientId = 'bca2a89f33694250b5b79633e3435a39';
+    const redirectUri = 'https://mart32jm.github.io/design/login.html';
 
-            const payload = {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: new URLSearchParams({
-                    grant_type: 'authorization_code',
-                    client_id: 'bca2a89f33694250b5b79633e3435a39',
-                    redirect_uri: 'https://mart32jm.github.io/design/login.html',
-                    code_verifier: codeVerifier,
-                    code: authCode, // From the URL
-                }),
-            };
+    const scope = 'user-read-private user-read-email'; // Specifies what user data your app can access!
+    const authUrl = new URL("https://accounts.spotify.com/authorize")
 
-            try {
-                const response = await fetch('https://accounts.spotify.com/api/token', payload);
-                const data = await response.json();
-                const accessToken = data.access_token;
+    const params =  {
+        response_type: 'code',
+        client_id: clientId,
+        scope: scope,
+        code_challenge_method: 'S256',
+        code_challenge: codeChallenge, // The hashed code verifier
+        redirect_uri: redirectUri,
+    }
 
-                const userProfileResponse = await fetch("https://api.spotify.com/v1/me", {
-                    headers: {
-                        'Authorization': 'Bearer ' + accessToken,
-                    },
-                });
+    authUrl.search = new URLSearchParams(params).toString();
+    window.location.href = authUrl.toString(); // Redirect the user 
 
-                const userProfile = await userProfileResponse.json();
-                document.getElementById('userName').textContent = 'Username: ' + userProfile.display_name;
-                document.getElementById('profileImage').src = userProfile.images[0].url;
-            } catch (error) {
-                console.error('Error fetching user profile:', error);
-            }
-        }
+    const urlParams = new URLSearchParams(window.location.search);
+    const authCode = urlParams.get('code');
 
-        // Call function to display user profile once the page loads
-        displayUserProfile();
-    </script>
+    // codeVerifier MUST be the same as the one used to make the code challenge for the auth request
+    codeVerifier = localStorage.getItem('code_verifier');
+
+    const payload = {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: new URLSearchParams({
+            grant_type: 'authorization_code',
+            client_id: 'bca2a89f33694250b5b79633e3435a39',
+            redirect_uri: 'https://mart32jm.github.io/design/login.html',
+            code_verifier: codeVerifier,
+            code: authCode, // From the URL
+        }),
+    }
+
+    const response = await fetch('https://accounts.spotify.com/api/token', payload);
+    const data = await response.json();
+
+    const accessToken = data.access_token;
+
+    response = await fetch("https://api.spotify.com/v1/me", {
+    headers: {
+        'Authorization': 'Bearer ' + accessToken,
+    },
+    });
+
+    data = await response.json();
+
+
+
+
+</script>
 </body>
 </html>
