--- a/design/login.html
+++ b/design/login.html
@@ -16,64 +16,87 @@
     </div>
 
     <script>
+        const generateRandomString = (length) => {
+            const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            const values = crypto.getRandomValues(new Uint8Array(length));
+            return values.reduce((acc, x) => acc + possible[x % possible.length], "");
+        }
 
-    const generateRandomString = (length) => {
-        const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-        const values = crypto.getRandomValues(new Uint8Array(length));
-        return Array.from(values)
-            .map((x) => possible[x % possible.length])
-            .join('');
-    }
+        const sha256 = async (plain) => {
+            const encoder = new TextEncoder();
+            const data = encoder.encode(plain);
+            return window.crypto.subtle.digest('SHA-256', data);
+        }
 
-    const sha256 = async (plain) => {
-        const encoder = new TextEncoder();
-        const data = encoder.encode(plain);
-        const hashBuffer = await window.crypto.subtle.digest('SHA-256', data);
-        const hashArray = Array.from(new Uint8Array(hashBuffer));
-        return hashArray.map((b) => ('00' + b.toString(16)).slice(-2)).join('');
-    }
+        const base64encode = (input) => {
+            return btoa(String.fromCharCode(...new Uint8Array(input)))
+                .replace(/=/g, '')
+                .replace(/\+/g, '-')
+                .replace(/\//g, '_');
+        }
 
-    const base64encode = (input) => {
-        return btoa(input)
-            .replace(/\+/g, '-')
-            .replace(/\//g, '_')
-            .replace(/=+$/, '');
-    }
+        const generateCodeChallenge = async (codeVerifier) => {
+            const hashed = await sha256(codeVerifier);
+            return base64encode(hashed);
+        }
 
-    document.getElementById('authorizeButton').addEventListener('click', async () => {
-        const codeVerifier = generateRandomString(64);
-        const codeChallenge = await sha256(codeVerifier);
+        const authorizeWithSpotify = async () => {
+            const codeVerifier = generateRandomString(64);
+            const codeChallenge = await generateCodeChallenge(codeVerifier);
 
-        // Save the code verifier for later use
-        localStorage.setItem('code_verifier', codeVerifier);
+            window.localStorage.setItem('code_verifier', codeVerifier);
 
-        const clientId = 'bca2a89f33694250b5b79633e3435a39';
-        const redirectUri = 'https://mart32jm.github.io/design/login.html';
+            const clientId = 'bca2a89f33694250b5b79633e3435a39';
+            const redirectUri = 'http://localhost:8080'; // Update with your redirect URI
+            const scope = 'user-read-private user-read-email';
+            const authUrl = new URL("https://accounts.spotify.com/authorize");
 
-        const scope = 'user-read-private user-read-email';
+            const params = {
+                response_type: 'code',
+                client_id: clientId,
+                scope,
+                code_challenge_method: 'S256',
+                code_challenge,
+                redirect_uri: redirectUri,
+            }
 
-        const authUrl = new URL("https://accounts.spotify.com/authorize");
-        const params = {
-            response_type: 'code',
-            client_id: clientId,
-            scope: scope,
-            code_challenge_method: 'S256',
-            code_challenge: base64encode(codeChallenge),
-            redirect_uri: redirectUri,
-        };
+            authUrl.search = new URLSearchParams(params).toString();
+            window.location.href = authUrl.toString();
+        }
 
-        authUrl.search = new URLSearchParams(params).toString();
-        window.location.href = authUrl.toString(); // Redirect the user 
-    });
+        document.getElementById('authorizeButton').addEventListener('click', authorizeWithSpotify);
 
-    const response = await fetch("https://api.spotify.com/v1/me", {
-    headers: {
-        'Authorization': 'Bearer ' + accessToken,
-    },
-    });
+        const getToken = async (code) => {
+            const codeVerifier = localStorage.getItem('code_verifier');
+            const clientId = 'bca2a89f33694250b5b79633e3435a39';
+            const redirectUri = 'http://localhost:8080'; // Update with your redirect URI
 
-    const data = await response.json();
+            const payload = {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams({
+                    client_id: clientId,
+                    grant_type: 'authorization_code',
+                    code,
+                    redirect_uri: redirectUri,
+                    code_verifier: codeVerifier,
+                }),
+            }
 
+            const response = await fetch('https://accounts.spotify.com/api/token', payload);
+            const data = await response.json();
+
+            localStorage.setItem('access_token', data.access_token);
+        }
+
+        const urlParams = new URLSearchParams(window.location.search);
+        const authCode = urlParams.get('code');
+
+        if (authCode) {
+            getToken(authCode);
+        }
     </script>
 </body>
 </html>
