--- a/design/login.html
+++ b/design/login.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <h1>Spotify Profile</h1>
-    <button id="authorizeButton">Authorize with Spotify</button>
-    <div id="profileInfo">
-        <h2>User Profile</h2>
-        <p id="userName">Username: </p>
-        <img src="" alt="Profile Image" id="profileImage">
-    </div>
-
     <script>
         const generateRandomString = (length) => {
             const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
@@ -22,86 +14,70 @@
             return values.reduce((acc, x) => acc + possible[x % possible.length], "");
         }
 
+        const codeVerifier = generateRandomString(64);
+
         const sha256 = async (plain) => {
-            const encoder = new TextEncoder();
-            const data = encoder.encode(plain);
-            return window.crypto.subtle.digest('SHA-256', data);
+            const encoder = new TextEncoder()
+            const data = encoder.encode(plain)
+            return window.crypto.subtle.digest('SHA-256', data)
         }
 
         const base64encode = (input) => {
             return btoa(String.fromCharCode(...new Uint8Array(input)))
-                .replace(/=/g, '')
+                .replace(/=/g,'')
                 .replace(/\+/g, '-')
                 .replace(/\//g, '_');
         }
 
-        const generateCodeChallenge = async (codeVerifier) => {
-            const hashed = await sha256(codeVerifier);
-            return base64encode(hashed);
+        const hashed = await sha256(codeVerifier)
+        const codeChallenge = base64encode(hashed)
+
+        const clientId = 'bca2a89f33694250b5b79633e3435a39'
+        const redirectUri = 'https://mart32jm.github.io/design/login.html'
+
+        const scope = 'user-read-private user-read-email';
+        const authUrl = new URL("https://accounts.spotify.com/authorize")
+
+        window.localStorage.setItem('code_verifier', codeVerifier);
+
+        const params = {
+            response_type: 'code',
+            client_id: clientId,
+            scope,
+            code_challenge_method: 'S256',
+            code_challenge: codeChallenge,
+            redirect_uri: redirectUri
         }
 
-        const authorizeWithSpotify = async (codeChallenge) => {
-            const clientId = 'bca2a89f33694250b5b79633e3435a39';
-            const redirectUri = 'http://localhost:8080'; // Update with your redirect URI
-            const scope = 'user-read-private user-read-email';
-            const authUrl = new URL("https://accounts.spotify.com/authorize");
+        authUrl.search = new URLSearchParams(params).toString();
+        window.location.href = authUrl.toString();
 
-            window.localStorage.setItem('code_verifier', codeVerifier);
+        const urlParams = new URLSearchParams(window.location.search);
+        let code = urlParams.get('code');
 
-            const params = {
-                response_type: 'code',
-                client_id: clientId,
-                scope,
-                code_challenge_method: 'S256',
-                code_challenge,
-                redirect_uri: redirectUri,
-            }
+        const getToken = async code => {
+            let codeVerifier = localStorage.getItem('code_verifier');
 
-            authUrl.search = new URLSearchParams(params).toString();
-            window.location.href = authUrl.toString();
-        }
+        const payload = {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: new URLSearchParams({
+        client_id: clientId,
+        grant_type: 'authorization_code',
+        code,
+        redirect_uri: redirectUri,
+        code_verifier: codeVerifier,
+        }),
+    }
 
-        document.getElementById('authorizeButton').addEventListener('click', async () => {
-            const codeVerifier = generateRandomString(64);
-            const codeChallenge = await generateCodeChallenge(codeVerifier);
-            authorizeWithSpotify(codeChallenge);
-        });
+        const body = await fetch(url, payload);
+        const response =await body.json();
 
-        const getToken = async (code) => {
-            const codeVerifier = localStorage.getItem('code_verifier');
-            const clientId = 'bca2a89f33694250b5b79633e3435a39';
-            const redirectUri = 'http://localhost:8080'; // Update with your redirect URI
+        localStorage.setItem('access_token', response.access_token);
 
-            const payload = {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: new URLSearchParams({
-                    client_id: clientId,
-                    grant_type: 'authorization_code',
-                    code,
-                    redirect_uri: redirectUri,
-                    code_verifier: codeVerifier,
-                }),
-            }
-
-            const response = await fetch('https://accounts.spotify.com/api/token', payload);
-            const data = await response.json();
-
-            localStorage.setItem('access_token', data.access_token);
-        }
-
-        const handleAuthorizationResponse = async () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const authCode = urlParams.get('code');
-
-            if (authCode) {
-                await getToken(authCode);
-            }
-        }
-
-        handleAuthorizationResponse(); // Check for authorization code on page load
+}
     </script>
 </body>
 </html>
