--- a/design/login.html
+++ b/design/login.html
@@ -45,7 +45,7 @@
       </li>
       <li class="get-code">Put your app's:
         <ul>
-          <li><code>Client Id</code> here: <input required type="password" name="client-id" id="client-id" autofocus>
+          <li>
           </li>
           <li><code>redirect uri</code> here: <input required type="text" name="redirect-uri" id="redirect-uri"></li>
         </ul>
@@ -84,7 +84,7 @@
   <script>
     //get refs to dom elements
     const authCodeOutputElem = document.getElementById('code-output')
-    const clientIDElem = document.getElementById('client-id')
+    const clientIDElem = 'bca2a89f33694250b5b79633e3435a39'
     const redirectURIElem = document.getElementById('redirect-uri')
     const getCodeBtn = document.getElementById('begin')
     const getTokenBtn = document.getElementById('token')
