--- a/design/login.html
+++ b/design/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify PKCE Demo</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="https://fav.farm/🎵">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -29,6 +30,14 @@
     </style>
 </head>
 <body>
+  <nav>
+    <a href="index.html" class="selected">Home</a>
+    <a href="generator.html">Generator</a>
+    <a href="playlists.html">Playlists</a>
+    <a href="stats.html">Stats</a>
+    <a href="help.html">Help</a>
+    <a href="login.html" id="loginButton">Login</a>
+</nav>
 <h1>Spotify PKCE Demo</h1>
 <p>"Client-side-only" Spotify api consumption. find source code here <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
 <button type="button" id="authorize">Authorize</button>
