--- a/design/login.html
+++ b/design/login.html
@@ -9,25 +9,6 @@
     <link rel="icon" href="https://fav.farm/🎵">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <style>
-        input:invalid {
-            border: 2px solid red;
-        }
-
-        output {
-            background-color: lightgray;
-            font-family: 'Courier New', Courier, monospace;
-            word-break: break-all;
-        }
-
-        label {
-            font-weight: bold;
-        }
-
-        li {
-            margin-block-end: 1rem;
-        }
-    </style>
 </head>
 <body>
   <nav>
@@ -38,8 +19,8 @@
     <a href="help.html">Help</a>
     <a href="login.html" id="loginButton">Login</a>
 </nav>
-<h1>Spotify PKCE Demo</h1>
-<p>"Client-side-only" Spotify api consumption. find source code here <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
+<h1>Log into Spotify</h1>
+<p>Authorize your account, and your profile should show up here! <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
 <button type="button" id="authorize">Authorize</button>
 
 <div id="profile-info" style="display: none;">
