--- a/design/login.html
+++ b/design/login.html
@@ -12,15 +12,15 @@
 </head>
 <body>
   <nav>
-    <a href="index.html" class="selected">Home</a>
+    <a href="index.html">Home</a>
     <a href="generator.html">Generator</a>
     <a href="playlists.html">Playlists</a>
     <a href="stats.html">Stats</a>
     <a href="help.html">Help</a>
-    <a href="login.html" id="loginButton">Login</a>
+    <a href="login.html" class="selected" id="loginButton">Login</a>
 </nav>
 <h1>Log into Spotify</h1>
-<p>Authorize your account, and your profile should show up here! <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
+<p>Authorize your account, and your profile should show up here!</p>
 <button type="button" id="authorize">Authorize</button>
 
 <div id="profile-info" style="display: none;">
