--- a/design/login.html
+++ b/design/login.html
@@ -2,33 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" href="https://fav.farm/🎵">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="../scripts/script.js" defer></script>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="generator.html">Generator</a>
-    <a href="playlists.html">Playlists</a>
-    <a href="stats.html">Stats</a>
-    <a href="help.html">Help</a>
-    <a href="login.html" class="selected" id="loginButton">Login</a>
-</nav>
-<h1>Log into Spotify</h1>
-<p>Authorize your account, and your profile should show up here!</p>
-<button type="button" id="authorize">Authorize</button>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="generator.html">Generator</a>
+        <a href="playlists.html">Playlists</a>
+        <a href="stats.html">Stats</a>
+        <a href="help.html">Help</a>
+        <a href="login.html" class="selected" id="loginButton">Login</a>
+    </nav>
 
-<div id="profile-info" style="display: none;">
-    <img id="profile-image" src="" alt="Profile Image">
-    <h2 id="profile-name"></h2>
-</div>
+    <div class="login-content">
+        <h1>Login to Spotify</h1>
+        <div>
+            <button id="authorize">Authorize</button>
+        </div>
+        <div>
+            <button id="get-token">Get Token</button>
+        </div>
+        <div>
+            <button id="profile-button">Get Profile</button>
+        </div>
+        <div>
+            <button id="generate-button">Generate Code Challenge</button>
+        </div>
+    </div>
 
-<output id="api-output"></output>
-<script src="../scripts/script.js"></script>
+    <script src="../scripts/script.js" defer></script>
 </body>
 </html>
